--- a/lesson-2/01-task.html
+++ b/lesson-2/01-task.html
@@ -13,7 +13,8 @@
         потом "world"
     </p>
     <script>
-        alert("hello") alert("world")
+        alert("hello"); 
+        alert("world");
     </script>
 </body>
 
