--- a/lesson-2/02-task.html
+++ b/lesson-2/02-task.html
@@ -20,14 +20,14 @@
         Hello world
     </div>
     <script>
-        создаем переменную с именем element и присваиваем ей первый HTML элемент div, который будет найден в документе. 
+        // создаем переменную с именем element и присваиваем ей первый HTML элемент div, который будет найден в документе. 
         let element = document.querySelector("div");
         
-        "вешаем" обработчик на событие click (клик левой клавишей мыши). 
-        При клике по HTML элементу, находящемуся в переменной element будет запускаться функция-обработчик.
+        // "вешаем" обработчик на событие click (клик левой клавишей мыши). 
+        // При клике по HTML элементу, находящемуся в переменной element будет запускаться функция-обработчик.
         
         element.addEventListener("click", function() {
-            element.innerText = "Привет мир!";  для HTML элемента, который находится в переменной element меняем значение текста, который находится в элементе.
+            element.innerText = "Привет мир!";  //для HTML элемента, который находится в переменной element меняем значение текста, который находится в элементе.
         });
     </script>
 </body>
