--- a/lesson-2/03-task.html
+++ b/lesson-2/03-task.html
@@ -9,5 +9,7 @@
     <p>
         Задание: Подключите к этому документу сценарий из файла my-script.js
     </p>
+
+    <script src="my-script.js"></script>
 </body>
 </html>
