js first part of h/w

--- a/lesson-3/02-task.html
+++ b/lesson-3/02-task.html
@@ -15,6 +15,14 @@
     </pre>
     
     <script>
+        // 1)
+        let date;
+
+        // 2)
+        let varr;
+
+        // 3)
+        let errors;
 
     </script>
 </body>
