--- a/lesson-3/03-task.html
+++ b/lesson-3/03-task.html
@@ -18,6 +18,10 @@
         // Вычислите значение площади окружности на основании значений выше. 
         // Площадь круга равна произведению квадрата радиуса на число Пи (3.1415)
         // Выведите результат
+
+        let square = Pi * r**2;
+        console.log(square);
+        
     </script>
 </body>
 </html>
