--- a/lesson-3/04-task.html
+++ b/lesson-3/04-task.html
@@ -23,6 +23,15 @@
         // Выведите на экран:
         // 1) Среднюю цену на продукт
         // 2) Общую стоимость всех продуктов, которые есть на складе
+
+        // 1)
+        let averageSum = (productPrice1 + productPrice2 + productPrice3) / 3;
+        console.log(averageSum);
+        
+        // 2)
+        let sum = productPrice1 * productQuantity1 + productPrice2 * productQuantity2 + productPrice3 * productQuantity3;
+        console.log(sum);
+
     </script>
 </body>
 </html>
