--- a/lesson-3/05-task.html
+++ b/lesson-3/05-task.html
@@ -13,7 +13,9 @@
         console.log("Вычисление объема цилиндра.");
         //  V=π * r в квадрате * h
         let V; 
-        let Pi = 3.1415926535; 
+
+        // нужно заменить объявление переменной у Pi на const
+        const Pi = 3.1415926535; 
         let r = 10;
         let h = 20;
 
