--- a/lesson-8/02-task.html
+++ b/lesson-8/02-task.html
@@ -13,7 +13,13 @@
         Предусматривать обработку нечисловых значений не обязательно.
     </pre>
     <script>
-        
+        let num;
+        do {
+            num = prompt('Enter num more than 10', 1);
+        }
+        while (num < 10) {
+            alert('Success');
+        }
     </script>
 </body>
 </html>
