--- a/lesson-11/01-task.html
+++ b/lesson-11/01-task.html
@@ -8,15 +8,15 @@
 <body>
     <pre>
         Задание:
-        При помощи цикла for выведите все четные числа между 0 и 100
+        Создайте функцию min(a, b), которая возвращает меньшее из чисел а и b
     </pre>
     <script>
-        for (let i = 2; i <= 100; i++) {
-            if(i % 2 == 0) {
-                console.log(i);
-            }
+        function min(a, b)
+        {
+            return a < b ? a : b;
         }
-        
+
+        console.log(min(5, 10));
     </script>
 </body>
 </html>
