--- a/lesson-8/04-task.html
+++ b/lesson-8/04-task.html
@@ -11,7 +11,16 @@
         Запросите у пользователя число, посчитайте сумму всех числе между 0 и введенным значением и отобразите результат на экран.
     </pre>
     <script>
-        
+        let num = +prompt('Enter num to get sum: ', 1);
+        let sum = 0;
+
+        for (let i = 0; i <= num; i++) {
+            sum = sum + i;
+            console.log(sum);
+        }
+
+        alert(`Sum = ${sum}`);
+
     </script>
 </body>
 </html>
