--- a/lesson-13/04-task.html
+++ b/lesson-13/04-task.html
@@ -43,6 +43,16 @@
             ],
             favoriteFruit: 'strawberry'
         }
+        
+        console.log(user);
+
+        console.log("firstName: " + user.name.first);
+        console.log("lastName " + user.name.last);
+
+        user.balance = "$2000";
+        delete user.email;
+
+        console.log(user);
     </script>
 </body>
 
